--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ TALK MORE ABOUT HOW STRANGE MACHINE INTELLIGENCE IS
   <h3>Connectionist Model of Cognition</h3>
   The way neural networks learn is what makes them different from the network of lookup tables in the Searle's counter. In the network of lookup tables, each node
   contains an unchanging book of values that maps inputs to ouputs. In a neural network, network inputs are completely unrecognizable in the hidden layers, the network is
-  a cascade of activations and complex learned transformations on the data wich it –much like the brain– translates into something useful at the output layer.
+  a cascade of activations and complex learned transformations on the data which it –much like the brain– translates into something useful at the output layer.
   Below is an interface with a neural network that labels words in sentences with their corresponding parts of speech.
 
 </div>
