--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 THESIS THESIS THESIS
 CITE PAPER ABOUT HOW POPULAR TURING TEST IS
 TALK MORE ABOUT HOW STRANGE MACHINE INTELLIGENCE IS
+Maybe move definition of connectionism to before connectionist reply.
 -->
 
 <html lang="en">
@@ -167,7 +168,12 @@ TALK MORE ABOUT HOW STRANGE MACHINE INTELLIGENCE IS
       Maybe, just maybe there's some special threshold of richness and complexity past which the wonders of emergence allow a collection of neuron approximators to express a mind.
       <br><br>
       Maybe we're heading right towards it.
+      <br><br>
+      April 4, 2017
+      <br>
+      Sam Ingersoll
   </div>
+
 </body>
 
 <script src="./js/main.js"></script>
