--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="text">
-  <h1>Writing</h1>
+  <h1>Notes</h1>
   <a href="./writing/UnderstandingInConnectionistModels/index.html" class="homepage_link">Understanding in Connectionist Models</a>
   
   <h1>Papers</h1>
