changed header papers to say notes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <div class="text">
-  <h1>Notes</h1>
+  <h1>Writing</h1>
   <a href="./writing/UnderstandingInConnectionistModels/index.html" class="homepage_link">Understanding in Connectionist Models</a>
   
-  <h1>Papers</h1>
+  <h1>Notes</h1>
   <a href="./papers/ImprovedMotionPlanningSpeedSafetyInevitableCollision/index.html" class="homepage_link">Improved Motion Planning Speed and Safety using Regions of Inevitable Collision</a>
   <br><br>
   <a href="./papers/PhylogenyRevealsClockLikeSpeciationDiversification/index.html" class="homepage_link">Tree of Life Reveals Clock-Like Speciation and Diversification</a>
