Separated build log and wiki, wrote first two entries of build log

--- a/wiki/PID/PID.html
+++ b/wiki/PID/PID.html
@@ -18,7 +18,7 @@
     <figcaption>A block diagram from <a href="#TWescottPID">PID Without a PhD</a> representing the PID control loop.</figcaption>
   </figure>
   <h3 id="gains-and-tuning">Gains and tuning</h3>
-  <i class="bib" id="TWescottPID">T Wescott. (2016). PID Without a PhD. Wescott Design Services.</i>
+  <i class="bib" id="TWescottPID">T. Wescott. (2016). PID Without a PhD. Wescott Design Services.</i>
   <br><br>
       November 15, 2017
       <br>
