--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 <div class="text">
+  <a href="./wiki/index.html" class="homepage_link"><h1>Wiki</h1></a>
+  <!-- <a href="./wiki/index.html" class="homepage_link">Understanding in Connectionist Models</a> -->
+
   <h1>Writing</h1>
   <a href="./writing/UnderstandingInConnectionistModels/index.html" class="homepage_link">Understanding in Connectionist Models</a>
-  
+
   <h1>Notes</h1>
   <a href="./papers/ImprovedMotionPlanningSpeedSafetyInevitableCollision/index.html" class="homepage_link">Improved Motion Planning Speed and Safety using Regions of Inevitable Collision</a>
   <br><br>
@@ -34,4 +37,3 @@
   </div>
 
 </body>
-
