trying to fix path

--- a/procedural.html
+++ b/procedural.html
@@ -4,7 +4,7 @@
   Sam-2.0 // Work
   </title>
 	<head>
-    <link rel="stylesheet" type="text/css" href="scripts/min_scss/procedural.min.css">
+    <link rel="stylesheet" type="text/css" href="./scripts/min_scss/procedural.min.css">
 	</head>
 	<body>
     <div id="background1">
