--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>
-  Sam-2.0 // Work
+  // work
   </title>
 	<head>
     <link rel="stylesheet" type="text/css" href="./portfolio/scripts/min_scss/style.min.css">
