--- a/walk/walk.html
+++ b/walk/walk.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="meadow.json"></script>
     <script type="text/javascript" src="walk.js"></script>
 </head>
-<body onload="run()">
+<body onload="run()" setInterval(run(), 6000);>
   <h1>A walk</h1>
   <h2>from a dream</h2>
   <b id="location">The Meadow</b><br><br>
